--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ben P</title>
     <meta charset="utf-8">
     <meta name="author" content="Ben Purinton">
-    <link rel="stylesheet" href="/new_theme.css">
+    <link rel="stylesheet" href="new_theme.css">
     <link rel="shortcut icon" href="/thumbnails/BP-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&display=swap" rel="stylesheet">
   </head>
