remove / from images

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta name="author" content="Ben Purinton">
     <link rel="stylesheet" href="new_theme.css">
-    <link rel="shortcut icon" href="/thumbnails/BP-32x32.png">
+    <link rel="shortcut icon" href="thumbnails/BP-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="items">
       <div class="banner">
-        <img src="/thumbnails/headshot_nome.jpg" alt="Ben Purinton's headshot" class="banner-image">
+        <img src="thumbnails/headshot_nome.jpg" alt="Ben Purinton's headshot" class="banner-image">
       </div>
       
       <div class="name">
