update to test re-deploy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       
       <div class="name">
-        Ben(jamin) Purinton
+        Ben Purinton
       </div>
       
       <div class="social-icons">
