--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ben P</title>
+    <title>Ben Purinton</title>
     <meta charset="utf-8">
     <meta name="author" content="Ben Purinton">
   <head>
