--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <head>
 
   <body>
-    <img src="/thumbnails/headshot_nome.jPG" alt="Ben Purinton's headshot">
+    <img src="/thumbnails/headshot_nome.JpG" alt="Ben Purinton's headshot">
   </body>
 </html>
